--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     h1 {color:rgb(120,70,30)}
     h3 {color:rgb(120,70,30)}
     div {border:ridge; border-width:10px; width:200px; height:150px}
-    p {color:blue}
+    p {color:rgb(0,0,238); text-decoration:underline}
   </style>
 </head>
 <body>
