--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   <div>
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Korb_mit_Br%C3%B6tchen.JPG/1200px-Korb_mit_Br%C3%B6tchen.JPG" width="200">
   </div>
+  <a href="https://web.archive.org/web/20210305182351/https://sallysbakingaddiction.com/homemade-artisan-bread/">or this...</a>
 </body>
 </html>
